ADD: results of multithreaded data downloading

--- a/eng/1. Multithreaded Data Downloading.md
+++ b/eng/1. Multithreaded Data Downloading.md
@@ -61,3 +61,9 @@ Main data loading engine:
 ---
 
 ## Results & Metrics
+
+![alt text](image.png)
+- 9.124 billion (9,124,000,000) rows of data were extracted by analysts for research purposes using multithreaded data extraction over the past 80 days as of the date of this report.
+
+![alt text](/src/sleekshot.png)
+- Sequential data extraction for the past 180 days would have taken approximately 1,639 hours (68 days). Thanks to the implementation of multithreading, the extraction time was reduced by at least 30 times — down to 2.27 days. Moreover, instead of the recommended 30 threads, many used 50–70 threads, which further accelerated the process and saved even more time.
