--- a/ru/1. Многопоточная выгрузка данных.md
+++ b/ru/1. Многопоточная выгрузка данных.md
@@ -35,7 +35,7 @@
 | Даункастинг типов датафрейма    | Автоматическое сжатие типов данных в DataFrame, например, преобразование `int64` в `int32` или `object` в `category` | Снижение потребления памяти и повышение эффективности работы с данными |
 | Покусочная сборка файла или DataFrame | Запись данных осуществляется по частям (чанкам): при сохранении в файл данные дозаписываются в конец файла, при формировании DataFrame — происходит поэтапное добавление чанков | Позволяет обрабатывать и сохранять объёмы данных, превышающие объём оперативной памяти, снижает пиковую нагрузку |
 
----
+--- 
 
 ## 🧠 Архитектура и ключевые блоки
 
@@ -62,5 +62,8 @@
 
 ## Результаты, показатели
 
+![alt text](/src/image.png)
+- 9124 миллионов (9,124,000,000) строк данных было выгружено аналитиками для исследований с помощью многопоточной выгрузки за последние 180 дней на момент написания этого текста
 
-
+![alt text](/src/sleekshot.png)
+- Выгрузка данных за последние 180 дней при последовательном режиме заняла бы около 1639 часов (68 дней). За счёт внедрения многопоточности время выгрузки удалось сократить **минимум** в 30 раз — до 2,27 дней. При этом, вместо рекомендованных 30 потоков, многие использовали 50–70 потоков, что позволило дополнительно ускорить процесс и сэкономить ещё больше времени.
