--- a/eng/1. Multithreaded Data Downloading.md
+++ b/eng/1. Multithreaded Data Downloading.md
@@ -67,3 +67,17 @@ Main data loading engine:
 
 ![alt text](/src/sleekshot.png)
 - Sequential data extraction for the past 180 days would have taken approximately 1,639 hours (68 days). Thanks to the implementation of multithreading, the extraction time was reduced by at least 30 times — down to 2.27 days. Moreover, instead of the recommended 30 threads, many used 50–70 threads, which further accelerated the process and saved even more time.
+
+
+- Using of optimization sighificantly improves performance:
+```
+Before optimization:
+
+Peak memory usage: 9003.24 MB
+Dataframe memory usage: 5778.92 MB
+
+After optimization:
+
+Peak memory usage: 4028.07 MB
+Dataframe memory usage: 3974.63 MB
+```
