--- a/ru/1. Многопоточная выгрузка данных.md
+++ b/ru/1. Многопоточная выгрузка данных.md
@@ -67,3 +67,16 @@
 
 ![alt text](/src/sleekshot.png)
 - Выгрузка данных за последние 180 дней при последовательном режиме заняла бы около 1639 часов (68 дней). За счёт внедрения многопоточности время выгрузки удалось сократить **минимум** в 30 раз — до 2,27 дней. При этом, вместо рекомендованных 30 потоков, многие использовали 50–70 потоков, что позволило дополнительно ускорить процесс и сэкономить ещё больше времени.
+
+- Благодаря оптимизации памяти удалось добиться результатов:
+```
+До оптимизации:
+
+Peak memory usage: 9003.24 MB
+Dataframe memory usage: 5778.92 MB
+
+После оптимизации:
+
+Peak memory usage: 4028.07 MB
+Dataframe memory usage: 3974.63 MB
+```
