--- a/eng/1. Multithreaded Data Downloading.md
+++ b/eng/1. Multithreaded Data Downloading.md
@@ -1,14 +1,16 @@
 # Multithreaded Data Downloader for OpenSearch/Elasticsearch
 
+**Professional Project — Gear Games**
+
 ## Project Overview
 
-A production-grade ETL tool designed for high-volume data extraction from OpenSearch/Elasticsearch clusters. This solution was developed to address critical performance bottlenecks in analytics data pipelines, achieving a **30x performance improvement** while reducing memory consumption by **55%**.
+A production-grade ETL tool developed for Gear Games analytics department to enable high-volume data extraction from OpenSearch/Elasticsearch clusters. This solution addresses critical performance bottlenecks in analytics data pipelines, achieving a **30x performance improvement** while reducing memory consumption by **55%**. The tool is actively used by the analytics team for data research and by automated scripts for scheduled data processing.
 
 ---
 
 ## Business Challenge
 
-**Context:** Analytics team required large-scale historical data extraction from sharded OpenSearch indexes for research and reporting.
+**Context:** Gear Games analytics team required large-scale historical data extraction from sharded OpenSearch indexes for research and reporting.
 
 **Problems identified:**
 - Sequential data extraction taking **68+ days** for 180-day periods
@@ -118,9 +120,10 @@ optimize_dataframe()
 
 - **Time Savings:** Analytics team can now get 180 days of data in **2.27 days** vs. 68 days
 - **Resource Efficiency:** 55% reduction in memory allows running on smaller instances
-- **Scalability:** Successfully processed **9.1+ billion rows** across analytics use cases
+- **Scalability:** Analytics team extracted **9.1+ billion rows in 1 month** (automated scripts usage not included in metrics)
 - **Reliability:** Automatic error recovery and caching reduced manual intervention by 90%
 - **Developer Experience:** Analysts use 50-70 threads (vs. recommended 30) for even faster results
+- **Active Usage:** Daily operations by analytics department and production scripts at Gear Games
 
 ---
 
@@ -182,9 +185,10 @@ def concat_in_chunks(df_iter: Iterator[pd.DataFrame],
 
 ## Usage Statistics
 
-Real-world production metrics over the last 180 days:
+Real-world production metrics at Gear Games:
 
-- **Total extractions:** 9.124 billion rows
+- **Total extractions (1 month):** 9.124 billion rows by analytics team
+- **Note:** Automated scripts also use this tool, but their usage is not included in these metrics
 - **Average speedup:** 30x (theoretical sequential time: 1,639 hours → actual: ~54 hours)
 - **Thread usage:** Most analysts use 50-70 threads (exceeding recommended 30) for additional speed gains
 - **Cache hit rate:** ~40% of queries reused cached results
