--- a/ru/1. Многопоточная выгрузка данных.md
+++ b/ru/1. Многопоточная выгрузка данных.md
@@ -1,14 +1,16 @@
 # Многопоточная выгрузка данных из OpenSearch/Elasticsearch
 
+**Профессиональный проект — Gear Games**
+
 ## Обзор проекта
 
-Production-готовый ETL-инструмент, разработанный для высокопроизводительной выгрузки данных из кластеров OpenSearch/Elasticsearch. Решение было создано для устранения критических узких мест в аналитических пайплайнах, достигнув **30-кратного улучшения производительности** при одновременном снижении потребления памяти на **55%**.
+Production-готовый ETL-инструмент, разработанный для отдела аналитики Gear Games для высокопроизводительной выгрузки данных из кластеров OpenSearch/Elasticsearch. Решение устраняет критические узкие места в аналитических пайплайнах, достигнув **30-кратного улучшения производительности** при одновременном снижении потребления памяти на **55%**. Инструмент активно используется командой аналитиков для исследований данных и автоматизированными скриптами для запланированной обработки данных.
 
 ---
 
 ## Бизнес-задача
 
-**Контекст:** Команде аналитиков требовалась масштабная выгрузка исторических данных из шардированных индексов OpenSearch для исследований и отчётности.
+**Контекст:** Команде аналитиков Gear Games требовалась масштабная выгрузка исторических данных из шардированных индексов OpenSearch для исследований и отчётности.
 
 **Выявленные проблемы:**
 - Последовательная выгрузка данных занимала **68+ дней** для периода в 180 дней
@@ -118,9 +120,10 @@ optimize_dataframe()
 
 - **Экономия времени:** Аналитики теперь получают 180 дней данных за **2,27 дня** вместо 68 дней
 - **Эффективность ресурсов:** Снижение памяти на 55% позволяет запускать на более дешёвых инстансах
-- **Масштабируемость:** Успешно обработано **9,1+ млрд строк** в различных аналитических кейсах
+- **Масштабируемость:** Команда аналитики выгрузила **9,1+ млрд строк за 1 месяц** (использование автоматизированных скриптов не включено в метрики)
 - **Надёжность:** Автоматическое восстановление после ошибок и кэширование сократили ручное вмешательство на 90%
 - **Developer Experience:** Аналитики используют 50-70 потоков (против рекомендованных 30) для ещё большей скорости
+- **Активное использование:** Ежедневная работа отдела аналитики и продакшн-скриптов в Gear Games
 
 ---
 
@@ -182,9 +185,10 @@ def concat_in_chunks(df_iter: Iterator[pd.DataFrame],
 
 ## Статистика использования
 
-Реальные метрики в продакшене за последние 180 дней:
+Реальные метрики в продакшене Gear Games:
 
-- **Всего выгружено:** 9,124 млрд строк
+- **Всего выгружено (за 1 месяц):** 9,124 млрд строк командой аналитики
+- **Примечание:** Автоматизированные скрипты также используют данный инструмент, но их использование не включено в эти метрики
 - **Среднее ускорение:** в 30 раз (теоретическое последовательное время: 1 639 часов → фактическое: ~54 часа)
 - **Использование потоков:** Большинство аналитиков используют 50-70 потоков (превышая рекомендованные 30) для дополнительного ускорения
 - **Процент попаданий в кэш:** ~40% запросов переиспользовали кэшированные результаты
